--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "formik": "^2.2.9",
-    "material-ui": "^0.20.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
-    "react-confetti": "^6.0.1",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.8",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
